htdocs/css/openwebrx.css
/* ... */
input[type=range]:focus::-webkit-slider-runnable-track
{
	background: #B6B6B6;
	background: var(--track-background);
}

input[type=range]::-moz-range-track
{
	height: 3px;
	cursor: pointer;
	animate: 0.2s;
	box-shadow: 0px 0px 0px #000000;
	background: #B6B6B6;
	background: var(--track-background);
	border-radius: 11px;
	border: 1px solid #8A8A8A;
}

input[type=range]::-moz-range-thumb
{
	box-shadow: 1px 1px 1px #828282;
	border: 1px solid #8A8A8A;
	height: 12px;
	width: 12px;
	border-radius: 10px;
	background: #FFFFFF;
	cursor: pointer;
}

input[type=range]::-ms-track
{
	width: 100%;
	height: 7px;
	cursor: pointer;
	animate: 0.2s;
	background: transparent;
	border-color: transparent;
	color: transparent;
}

input[type=range]::-ms-fill-lower
 {
	background: #B6B6B6;
	border: 1px solid #8A8A8A;
	border-radius: 22px;
	box-shadow: 0px 0px 0px #000000;
}

input[type=range]::-ms-fill-upper
{
	background: #B6B6B6;
	border: 1px solid #8A8A8A;
	border-radius: 22px;
	box-shadow: 0px 0px 0px #000000;
}

input[type=range]::-ms-thumb
{
	box-shadow: 1px 1px 1px #828282;
	border: 1px solid #8A8A8A;
	height: 24px;
	width: 7px;
	border-radius: 0px;
	background: #FFFFFF;
	cursor: pointer;
}

input[type=range]:focus::-ms-fill-lower
{
	background: #B6B6B6;
}

input[type=range]:focus::-ms-fill-upper
{
	background: #B6B6B6;
}

input[type=range]:disabled {
    opacity: 0.5;
}

#webrx-page-container
{
    height: 100%;
    position: relative;
    display: flex;
    flex-direction: column;
}

#openwebrx-scale-container
{
	height: 47px;
	overflow: hidden;
	z-index:1000;
	position: relative;
}

#openwebrx-frequency-container {
	background-image: url("../gfx/openwebrx-scale-background.png");
	background-repeat: repeat-x;
	background-size: auto 140px;
    background-color: #444;
    z-index: 1001;
}

#openwebrx-bookmarks-container
{
    height: 25px;
    position: relative;
    z-index: 1000;
}

#openwebrx-bookmarks-container .bookmark {
    font-size: 12px;
    background-color: #FFFF00;
    border: 1px solid #000;
    border-radius: 5px;
    padding: 2px 5px;
    cursor: pointer;
    white-space: nowrap;
    max-height: 14px;
    max-width: 50px;

    position: absolute;
    bottom: 5px;
    transform: translate(-50%, 0);
}

#openwebrx-bookmarks-container .bookmark .bookmark-content {
    overflow: hidden;
    text-overflow: ellipsis;
}

#openwebrx-bookmarks-container .bookmark .bookmark-actions {
    display: none;
    text-align: right;
}

.bookmark-actions .action {
    line-height: 0;
}

.bookmark-actions .action img {
    width: 14px;
}

#openwebrx-bookmarks-container .bookmark.selected {
    z-index: 1010;
}

#openwebrx-bookmarks-container .bookmark:hover {
    z-index: 1011;
    max-height: none;
    max-width: none;
}

#openwebrx-bookmarks-container .bookmark[editable]:hover .bookmark-actions {
    display: block;
    margin-bottom: 5px;
}

#openwebrx-bookmarks-container .bookmark:after {
	content: '';
	position: absolute;
	bottom: 0;
	left: 50%;
	width: 0;
	height: 0;
	border: 5px solid transparent;
	border-top-color: #FFFF00;
	border-bottom: 0;
	margin-left: -5px;
	margin-bottom: -5px;
}

#openwebrx-bookmarks-container .bookmark[data-source=local] {
    background-color: #0FF;
}

#openwebrx-bookmarks-container .bookmark[data-source=local]:after {
    border-top-color: #0FF;
}

#openwebrx-bookmarks-container .bookmark[data-source=dial_frequencies] {
    background-color: #0F0;
}

#openwebrx-bookmarks-container .bookmark[data-source=dial_frequencies]:after {
    border-top-color: #0F0;
}

#webrx-canvas-background {
    flex-grow: 1;
	background-image: url('../gfx/openwebrx-background-cool-blue.png');
	background-repeat: no-repeat;
	background-color: #1e5f7f;
	background-size: cover;
	display: flex;
	flex-direction: column;
}

@supports(background-image: -webkit-image-set(url('../gfx/openwebrx-background-cool-blue.webp') 1x)) {
    #webrx-canvas-background {
        background-image: -webkit-image-set(url('../gfx/openwebrx-background-cool-blue.webp') 1x);
    }
}

@supports(background-image: image-set(url('../gfx/openwebrx-background-cool-blue.webp') 1x)) {
    #webrx-canvas-background {
        background-image: image-set(url('../gfx/openwebrx-background-cool-blue.webp') 1x);
    }
}

#webrx-canvas-container
{
	position: relative;
	overflow: visible;
	cursor: crosshair;
	flex-grow: 1;
}

#webrx-canvas-container canvas
{
	position: absolute;
	top: 0;
	border-style: none;
	image-rendering: crisp-edges;
	image-rendering: -webkit-optimize-contrast;
    width: 100%;
    height: 200px;
    will-change: transform;
}

#openwebrx-log-scroll
{
    /*overflow-y:auto;*/
    height: 155px;
    max-width: 619px;
    width: 100%;
}

#openwebrx-messages .chatname {
    color: #bbb;
    font-weight: bold;
}

#openwebrx-messages .chatmessage {
}

#openwebrx-chat-inputs {
  margin-top: 5px;
  height: 1.5rem;
  width: 99%;
}

#openwebrx-log-scroll .nano-content, #openwebrx-log-scroll .nano-pane {
  height: 100%;
}

.nano .nano-pane   { background: #444; }
.nano .nano-slider { background: #eee !important;  }

.webrx-error
{
	font-weight: bold;
	color: #ff6262;
}

@font-face {
    font-family: 'roboto-mono';
    src: url('../fonts/RobotoMono-Regular.woff2') format('woff2'),
         url('../fonts/RobotoMono-Regular.woff') format('woff'),
         url('../fonts/RobotoMono-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

.webrx-actual-freq {
	width: 100%;
	text-align: left;
	padding: 0;
	margin: 0;
	display: flex;
	flex-direction: row;
	cursor: pointer;
}

.webrx-actual-freq > * {
    flex: 1;
}

.webrx-actual-freq .input-group {
    display: flex;
    flex-direction: row;
}

.webrx-actual-freq .input-group > * {
    flex: 0 0 auto;
}

.webrx-actual-freq .input-group input {
    flex: 1 0 auto;
    margin-right: 0;
    border-right: 1px solid #373737;
    -moz-appearance: textfield;
}
/* ... */

